--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ document.getElementById('generateBtn').addEventListener('click', async () => {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
-        'Authorization': 'Bearer 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'
-      },
+        'Authorization': 'Bearer <relace with api key>
+          },
       body: JSON.stringify({
         model: "gpt-4o-mini",
         messages: [
